--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,60 @@
+absl-py==0.11.0
 Adversarial-Robustness-Toolbox==1.0.1
+astor==0.8.1
+backcall==0.2.0
 cleverhans==3.0.1
+cloudpickle==1.1.1
+cycler==0.10.0
+decorator==4.4.2
+gast==0.4.0
+grpcio==1.36.0
 h5py==2.9.0
+importlib-metadata==3.7.0
+ipykernel==5.5.0
+ipython==7.21.0
+ipython-genutils==0.2.0
+jedi==0.18.0
+joblib==0.14.0
+jupyter-client==6.1.11
+jupyter-core==4.7.1
 Keras==2.2.4
 Keras-Applications==1.0.7
 Keras-Preprocessing==1.0.9
+kiwisolver==1.3.1
+Markdown==3.3.4
 matplotlib==3.0.3
+mnist==0.2.2
+mock==4.0.3
+nose==1.3.7
 numpy==1.16.2
 pandas==0.24.2
+parso==0.8.1
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.16
+protobuf==3.15.3
+ptyprocess==0.7.0
+pycodestyle==2.6.0
+Pygments==2.8.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2021.1
+PyYAML==5.4.1
+pyzmq==22.0.3
 qtconsole==4.4.3
 scikit-learn==0.20.3
 scipy==1.2.1
 seaborn==0.9.0
+six==1.15.0
 tensorboard==1.13.1
 tensorflow==1.13.1
 tensorflow-estimator==1.13.0
 tensorflow-probability==0.8.0
+termcolor==1.1.0
+tornado==6.1
 tqdm==4.41.1
+traitlets==5.0.5
+typing-extensions==3.7.4.3
+wcwidth==0.2.5
+Werkzeug==1.0.1
+zipp==3.4.0
